--- a/my-blog/pom.xml
+++ b/my-blog/pom.xml
@@ -24,9 +24,10 @@
         <thymeleaf.version>3.0.9.RELEASE</thymeleaf.version>
         <thymeleaf-spring4.version>3.0.9.RELEASE</thymeleaf-spring4.version>
         <thymeleaf-layout.version>2.1.2</thymeleaf-layout.version>
-        <fastjson.version>1.2.9</fastjson.version>
         <shiro-core.version>1.2.3</shiro-core.version>
         <shiro-spring.version>1.2.3</shiro-spring.version>
+        <fastjson.version>1.2.9</fastjson.version>
+        <commons-io.version>1.3.2</commons-io.version>
         <commons-lang3.version>3.4</commons-lang3.version>
         <google-collections.version>1.0</google-collections.version>
         <mysql-driver.version>5.1.38</mysql-driver.version>
@@ -85,12 +86,6 @@
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>${fastjson.version}</version>
-        </dependency>
-
         <!-- Shiro -->
         <dependency>
             <groupId>org.apache.shiro</groupId>
@@ -102,6 +97,18 @@
             <groupId>org.apache.shiro</groupId>
             <artifactId>shiro-spring</artifactId>
             <version>${shiro-spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>${fastjson.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commons-io.version}</version>
         </dependency>
 
         <dependency>
