--- a/crawler-demo01/pom.xml
+++ b/crawler-demo01/pom.xml
@@ -7,7 +7,6 @@
     <groupId>com.hnq.crawler</groupId>
     <artifactId>crawler-demo01</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>war</packaging>
 
     <name>crawler-demo01</name>
     <description>crawler data from https://gupiao.baidu.com/concept/</description>
@@ -23,7 +22,7 @@
         <javax.servlet.version>3.1.0</javax.servlet.version>
         <mysql-driver.version>5.1.38</mysql-driver.version>
         <mybatis-spring-boot.version>1.1.1</mybatis-spring-boot.version>
-        <mybatis-generator-maven-plugin.version>1.3.4-SNAPSHOT</mybatis-generator-maven-plugin.version>
+        <mybatis-generator-maven-plugin.version>1.3.7</mybatis-generator-maven-plugin.version>
         <jsoup.version>1.10.3</jsoup.version>
         <org.json.version>20160810</org.json.version>
         <io.webfolder.version>3.0.6</io.webfolder.version>
