--- a/my-blog/pom.xml
+++ b/my-blog/pom.xml
@@ -30,7 +30,7 @@
         <commons-lang3.version>3.4</commons-lang3.version>
         <google-collections.version>1.0</google-collections.version>
         <mysql-driver.version>5.1.38</mysql-driver.version>
-        <mybatis-generator-maven-plugin.version>1.3.4-SNAPSHOT</mybatis-generator-maven-plugin.version>
+        <mybatis-generator-maven-plugin.version>1.3.7</mybatis-generator-maven-plugin.version>
     </properties>
 
     <dependencies>
