--- a/my-blog/pom.xml
+++ b/my-blog/pom.xml
@@ -15,7 +15,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.2.RELEASE</version>
+        <version>2.1.0.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -29,7 +29,10 @@
         <fastjson.version>1.2.9</fastjson.version>
         <commons-io.version>1.3.2</commons-io.version>
         <commons-lang3.version>3.4</commons-lang3.version>
+        <commons-lang.version>2.5</commons-lang.version>
         <google-collections.version>1.0</google-collections.version>
+        <lombok.version>1.16.8</lombok.version>
+
         <mysql-driver.version>5.1.38</mysql-driver.version>
         <mybatis-generator-maven-plugin.version>1.3.4-SNAPSHOT</mybatis-generator-maven-plugin.version>
     </properties>
@@ -118,9 +121,21 @@
         </dependency>
 
         <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>${commons-lang.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.google.collections</groupId>
             <artifactId>google-collections</artifactId>
             <version>${google-collections.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
         </dependency>
     </dependencies>
 
