--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 
     <groupId>com.hnq.study</groupId>
     <artifactId>project-demos</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
 
     <parent>
@@ -19,6 +20,7 @@
         <module>sms-sender</module>
         <module>mail-sender</module>
         <module>crawler-demo</module>
+        <module>mail-sender02</module>
     </modules>
 
     <properties>
