--- a/crawler-demo/pom.xml
+++ b/crawler-demo/pom.xml
@@ -18,33 +18,30 @@
     <description>crawler data from https://gupiao.baidu.com/concept/</description>
 
     <properties>
-        <javax.servlet.version>3.1.0</javax.servlet.version>
-        <mysql-driver.version>5.1.38</mysql-driver.version>
-        <mybatis-spring-boot.version>1.1.1</mybatis-spring-boot.version>
+        <mybatis-spring-boot.version>2.0.0</mybatis-spring-boot.version>
         <mybatis-generator-maven-plugin.version>1.3.7</mybatis-generator-maven-plugin.version>
+        <mysql-driver.version>5.1.3</mysql-driver.version>
         <jsoup.version>1.10.3</jsoup.version>
-        <org.json.version>20160810</org.json.version>
+        <org.json.version>20090211</org.json.version>
         <io.webfolder.version>3.0.6</io.webfolder.version>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>${javax.servlet.version}</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>${mysql-driver.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>${mybatis-spring-boot.version}</version>
+        </dependency>
+
+        <!-- spring-boot-stater-jdbc v2.x.x 不包含 tomcat-jdbc ??? -->
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-jdbc</artifactId>
         </dependency>
 
         <!--
