--- a/fly/src/main/resources/application.properties
+++ b/fly/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# pagehelper分页插件配置
+# pagehelper鍒嗛〉鎻掍欢閰嶇疆
 pagehelper.helperDialect=mysql
 pagehelper.reasonable=true
 pagehelper.supportMethodsArguments=true
@@ -12,7 +12,7 @@ spring.redis.port=6379
 token.expire.seconds=7200
 token.jwtSecret=(XIAO:)_$^11244^%$_(WEI:)_@@++--(LAO:)_++++_.sds_(SHI:)
 
-# 打日志的配置
+# 鎵撴棩蹇楃殑閰嶇疆
 logging.file=/log/fly.log
 logging.level.root=info
 logging.level.com.hnq=debug
